add addNewComment feature
